# libfacedetection

./: CMakeLists.txt
example/: libfacedetect-example.cpp
